views/mus: Fix some flaky crashes during test teardown.

BUG=602038, 613371

Review-Url: https://codereview.chromium.org/1995613003
Cr-Commit-Position: refs/heads/master@{#394935}

Former-commit-id: a71fbc30b977cf95aaaef70e68d794510648198b